# task-manager

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  database.py  deps.py  main.py
app/core/: config.py
app/middleware/: auth_middleware.py
app/models/: task.py  user.py
app/routes/: __init__.py  auth.py  authentication.py  task.py  user.py
app/schemas/: task.py  user.py
app/services/: auth.py  auth_service.py  task_service.py  user_service.py
